--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,6 +48,7 @@
         </activity>
         <activity
             android:name="com.quanturium.androcloud2.activities.ShareActivity"
+            android:noHistory="true"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
