--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,12 +12,18 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <!-- Start of Crittercism.com Code -->
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <!-- End of Crittercism.com Code -->
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name="com.quanturium.androcloud.activities.MainActivity"
             android:label="@string/app_name"
